change content jdbl

--- a/public/templates/agb/agb-jdbl-it.html
+++ b/public/templates/agb/agb-jdbl-it.html
@@ -4,13 +4,11 @@
 
 	    <div class='col-sm-9'>
 	        <ul>
-				<li>In seguito all’iscrizione online il pagamento è obbligatorio. Per motivi organizzativi l&#39;annullamento dell’iscrizione ed il rimborso della quota non sono possibili. Esclusivamente nel caso di malattia l&#39;intera quota di partecipazione sarà rimborsata su presentazione di un certificato medico (entro 5 giorni).</li>
+				<li>In seguito all’iscrizione online il pagamento è obbligatorio. Per motivi organizzativi l'annullamento dell’iscrizione ed il rimborso della quota non sono possibili. Esclusivamente nel caso di malattia l'intera quota di partecipazione sarà rimborsata su presentazione di un certificato medico (entro 5 giorni).</li>
 				<li>I genitori o i tutori legali si assumono la responsabilità del tragitto del proprio figlio da e verso i rispettivi programmi. Durante il giorno i bambini ed i giovani sono sorvegliati dagli accompagnatori del programma estivo.</li>
-				<li>Assicurazione: Tutti i partecipanti sono assicurati per la responsabilità civile tramite l&#39;assicurazione AGJD (Associazione dei Servizi Giovanili).</li>
-				<li>I genitori o i tutori legali si dichiarano d&#39;accordo con le misure disciplinari adottate dagli assistenti: in caso di ripetute violazioni degli accordi e previa consultazione con i genitori, i giovani vengono rimandati a casa.</li>
-				<li>I partecipanti possono iscriversi ai programmi estivi del Comune di residenza. Fanno eccezione i programmi che sono aperti a tutti, questi li trovate nell&#39;ultima parte dell&#39;opuscolo.</li>
-				<li>I partecipanti devono essere residenti nell’area di competenza del Jugenddienst.</li>
-				<li>I programmi estivi sono finanziati dal rispettivo comune, dall&#39;Agenzia per la Famiglia della Provincia</li>
+				<li>I genitori o i tutori legali si dichiarano d'accordo con le misure disciplinari adottate dagli assistenti: in caso di ripetute violazioni degli accordi e previa consultazione con i genitori, i giovani vengono rimandati a casa.</li>
+				<li><strong>Approvazione per la pubblicazione di foto e la ripresa di video:</strong> Si informa espressamente che durante lo svolgimento dei programmi estivi, i partecipanti saranno fotografati e videoregistrati da parte di dipendenti autorizzati del Servizio Giovani e che tali immagini e filmati saranno utilizzati, pubblicati e distribuiti esclusivamente per comunicati stampa, presentazioni su Internet, presentazioni fotografiche ed altre attività del Servizio Giovani. Con il suo consenso il genitore, o chi ne fa le veci, conferma di aver preso atto delle informazioni qui riportate e autorizza il Servizio Gioveni ad utilizzare gratuitamente le fotografie e le riprese per le finalità di cui sopra.</li>
+				<li><strong>Protezione dei dati:</strong> Con la registrazione acconsentite al trattamento dei vostri dati personali nell’ambito della gestione dell’evento, in conformità alle disposizioni del D.lgs. 196/2003. Comunicazione ai sensi dell'art. 13 del D.lgs. 196/03: i dati raccolti saranno trattati esclusivamente per finalità interne e saranno utilizzati per circolari e per la redazione di liste di partecipanti ai programmi di vacanze estive. Con la registrazione il genitore, o chi ne fa le veci, conferma di aver preso atto delle informazioni fornite e autorizza espressamente il Servizio Giovani ad utilizzare i dati personali per le suddette finalità. Registrandosi ed accettando le norme sulla protezione dei dati, tutti i tutori legali dichiarano il loro consenso.</li>
 			</ul>
 	    </div>
 	</div>
