--- a/public/templates/info/info-jdbl-de.html
+++ b/public/templates/info/info-jdbl-de.html
@@ -1,12 +1,15 @@
 <div class='container'>
 	<h3>Infos</h3>
 	<ul>
-		<li>Verpflegung, Materialspesen, usw. sind im jeweiligen Teilnehmerpreis enthalten. Die Preise variieren nach Gemeinde/Programm, da die jeweiligen Gemeinden die Sommerprogramme  finanziell unterschiedlich unterstützen.</li>
-		<li>Die Teilnehmer*innen erhalten bei einer Spende von 10 Euro einen Jugenddienststick (4GB) mit allen Fotos des jeweiligen Programmes. Die Sticks dürfen behalten werden. Es dürfen auch Jugenddienststicks vom letzten Jahr verwendet werden. Diese müssen leer sein und am Anfang des jeweiligen Programmes den Betreuer*innen übergeben werden.</li>
-		<li><strong>Kinder mit besonderem Betreuungsaufwand:</strong> Dem Jugenddienst Bozen-Land ist es ein großes Anliegen auch Kinder mit physischer/psychischer Beeinträchtigung in die Programme zu integrieren. Kinder, welche aufgrund ihrer Situation, Verfassung und körperlicher Ressourcen einen besonderen Betreuungsaufwand benötigen, werden so weit als möglich durch eine zusätzliche Betreuungsperson während des Programms begleitet. Bitte bei der Anmeldung im vorgesehenen Feld eine kurze Beschreibung der Beeinträchtigung einfügen. Bei einem persönliches Gespräch im Frühjahr werden alle weiteren Details geklärt.</li>
-		<li><strong>Pädagogischer Ansatz:</strong> Bei den Sommerprojekten geht es uns als Jugenddienst Bozen-Land nicht nur um die Betreuung der Kinder und Jugendlichen, es geht uns vor allem darum, dass die Kids viel Spaß haben, aktiv sind und viele tolle Erlebnisse und neue Erfahrungen sammeln.</li>
-		<li><strong>Unser Team:</strong> Neben den 14 hauptamtlichen Mitarbeiter*innen des Jugenddienstes, sind im Sommer viele Betreuer*innen für das Sommerprogramm mitverantwortlich. Seit Jahren setzen wir dabei auf ein Team, die aus pädagogischem Fachpersonal, mit jugendlicher Frische, besteht. Diese Kombination hat sich bewährt und ist der Garant für viele tolle Sommerprogramme.</li>
+		<li>Die Teilnehmer*innen müssen im Einzugsgebiet des Jugenddienst Bozen-Land ansässig sein.</li>
+		<li>Die Teilnehmer*innen dürfen sich grundsätzlich nur bei den Sommerprogrammen in ihrer Gemeinde anmelden. Ausnahme bilden die besonderen Projekte, die offen für alle sind.</li>
+		<li>Verpflegung, Materialspesen, Ausflüge usw. sind im jeweiligen Teilnehmerpreis enthalten. Die Preise variieren nach Gemeinde/Programm, da die jeweiligen Gemeinden die Sommerprogramme unterschiedlich finanziell unterstützen.</li>
+		<li>Finanziert werden die Sommerprogramme von der jeweiligen Gemeinde, der Familienagentur des Landes Südtirol, Sponsoren und dem Jugenddienst Bozen-Land.</li>
+		<li><strong>Versicherung:</strong> Für alle Teilnehmer*innen wird über die Versicherung AGJD (Arbeitsgemeinschaft der Jugenddienste) eine Haftpflichtversicherung abgeschlossen.</li>
+		<li>Die Teilnehmer*innen erhalten bei einer Spende von 10 Euro einen <strong>Jugenddienststick</strong> (4GB) mit allen Fotos des jeweiligen Programmes! Die Sticks dürfen behalten werden! Es dürfen auch Jugenddienststicks vom letzten Jahr verwendet werden. Diese müssen leer sein und am Anfang des jeweiligen Programmes den Betreuer*innen übergeben werden.</li>
+		<li><strong>Kind mit besonderem Betreuungsaufwand:</strong> Dem Jugenddienst Bozen-Land ist es ein großes Anliegen auch Kinder mit einer Beeinträchtigung in die Programme zu integrieren. Kinder, welche aufgrund ihrer Situation, Verfassung und körperlichen Ressourcen einen besonderen Betreuungsaufwand benötigen, werden soweit als möglich durch eine zusätzliche Betreuungsperson während des Programmes begleitet. Bitte bei der Anmeldung im vorgesehenen Feld eine kurze Beschreibung der Beeinträchtigung einfügen.</li>
 	</ul>
-	<h3>Kontakt</h3>
-	<strong>Jasmine Saltuari</strong> (Tel. <a href='tel:+3473340181'>+3473340181</a>)
+	<h3>Fragen?</h3>
+	<a href="sommer@jugenddienst.it">sommer@jugenddienst.it</a>
+	<strong>Jasmin</strong> (Tel. <a href='tel:+3473340181'>+3473340181</a>)
 </div>
