--- a/public/templates/info/info-jdbl-it.html
+++ b/public/templates/info/info-jdbl-it.html
@@ -1,12 +1,15 @@
 <div class='container'>
 	<h3>Informazioni</h3>
 	<ul>
+		<li>partecipanti devono essere residenti nell’area di competenza del Servizio Giovani Bozen-Land.</li>
+		<li>I partecipanti possono iscriversi ai programmi estivi del Comune di residenza. Fanno eccezione i programmi che sono aperti a tutti.</li>
 		<li>Le spese di vitto, materiale, ecc. sono incluse nel prezzo (i prezzi sono inseriti nei rispettivi programmi). I prezzi variano a seconda del comune/programma, poiché i Comuni finanziano le attività estive in modo differente.</li>
-		<li>Con una donazione di 10€ si può ricevere una chiavetta usb (4GB) del Jugenddienst con tutte le foto del programma al quale si è preso parte! Le chiavette possono essere conservate. Possono inoltre essere utilizzate anche le chiavette dell&#39;anno scorso, le quali devono essere vuote e consegnate ai propri assistenti all&#39;inizio del programma.</li>
-		<li><strong>Bambini con bisogni speciali:</strong> il Jugenddienst si impegna a integrare nei suoi programmi i bambini con disabilità fisiche/cognitive. I bambini che a causa delle loro condizioni hanno bisogno di cure particolari saranno affiancati, per quanto possibile, da un ulteriore accompagnatore. Al momento della registrazione si prega di includere una breve descrizione della problematica nell’apposito riquadro. Tutti gli ulteriori dettagli saranno chiariti nel corso di un colloquio personale in primavera.</li>
-		<li><strong>Approccio pedagogico:</strong> Ciò che ci sta a cuore nella realizzazione dei programmi estivi non è solamente l’accompagnamento dei bambini e dei giovani, ma soprattutto dare loro la possibilità di divertirsi, di essere attivi e di vivere tante nuove e fantastiche esperienze.</li>
-		<li><strong>Unser Team:</strong> Oltre agli dipendenti a tempo pieno del Jugenddienst, durante l‘estate vengono attivati molti accompagnatori co-responsabili del programma estivo. Da anni il Jugenddienst si affida a un team di professionisti della formazione caratterizzati dalla vivacità. Questa combinazione si è dimostrata efficace ed è una garanzia per i molti e fantastici programmi estivi.</li>
+		<li>I programmi estivi sono finanziati dal rispettivo comune, dall'Agenzia per la Famiglia della Provincia Autonomia di Bolzano, dagli sponsor e dal Servizio Giovani Bozen-Land.</li>
+		<li><strong>Assicurazione:</strong> Tutti i partecipanti sono assicurati per la responsabilità civile tramite l'assicurazione AGJD (Associazione dei Servizi Giovanili).</li>
+		<li>Con una donazione di 10€ si può ricevere una chiavetta usb (4GB) del Servizio Giovani con tutte le foto del programma al quale si è preso parte! Le chiavette possono essere conservate. Possono inoltre essere utilizzate anche le chiavette dell'anno scorso, le quali devono essere vuote e consegnate ai propri assistenti all'inizio del programma.</li>
+		<li><strong>Bambini con bisogni speciali:</strong> il Servizio Giovani Bozen-Land si impegna a integrare nei suoi programmi i bambini con disabilità fisiche/cognitive. I bambini che a causa delle loro condizioni hanno bisogno di cure particolari saranno affiancati, per quanto possibile, da un ulteriore accompagnatore. Al momento della registrazione si prega di includere una breve descrizione della problematica nell’apposito riquadro. Tutti gli ulteriori dettagli saranno chiariti nel corso di un colloquio personale in primavera.</li>
 	</ul>
-	<h3>Contatto</h3>
-	<strong>Jasmine Saltuari</strong> (Tel. <a href='tel:+3473340181'>+3473340181</a>)
+	<h3>Domande?</h3>
+	<a href="sommer@jugenddienst.it">sommer@jugenddienst.it</a>
+	<strong>Jasmin</strong> (Tel. <a href='tel:+3473340181'>+3473340181</a>)
 </div>
