--- a/public/templates/info/info-jdbl-de.html
+++ b/public/templates/info/info-jdbl-de.html
@@ -10,6 +10,6 @@
 		<li><strong>Kind mit besonderem Betreuungsaufwand:</strong> Dem Jugenddienst Bozen-Land ist es ein großes Anliegen auch Kinder mit einer Beeinträchtigung in die Programme zu integrieren. Kinder, welche aufgrund ihrer Situation, Verfassung und körperlichen Ressourcen einen besonderen Betreuungsaufwand benötigen, werden soweit als möglich durch eine zusätzliche Betreuungsperson während des Programmes begleitet. Bitte bei der Anmeldung im vorgesehenen Feld eine kurze Beschreibung der Beeinträchtigung einfügen.</li>
 	</ul>
 	<h3>Fragen?</h3>
-	<a href="sommer@jugenddienst.it">sommer@jugenddienst.it</a>
+	<a href="sommer@jugenddienst.it">sommer@jugenddienst.it</a><br />
 	<strong>Jasmin</strong> (Tel. <a href='tel:+3473340181'>+3473340181</a>)
 </div>
