embed youtube url

--- a/public/templates/info/faq-jdbl-de.html
+++ b/public/templates/info/faq-jdbl-de.html
@@ -1,4 +1,4 @@
 <div class="container">
     <h3>Anleitung zur Anmeldung</h3>
-    <iframe width="400" height="300" src="https://www.youtube.com/watch?v=Kz_am-8d38g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Kz_am-8d38g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
