faq jd bozen-land

--- a/public/templates/info/faq-jdbl-de.html
+++ b/public/templates/info/faq-jdbl-de.html
@@ -1,4 +1,47 @@
 <div class="container">
     <h3>Anleitung zur Anmeldung</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Kz_am-8d38g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <div class="table-responsive">
+        <table class="table">
+          <tr>
+              <td><strong>Schritt 1:</strong></td>
+              <td>Einsteigen unter www.jdbl.it</td>
+          </tr>
+          <tr>
+            <td><strong>Schritt 2:</strong></td>
+            <td>Unter Menüpunkt „Sommer“ die Gemeinde und das gewünschte Programm aussuchen. Hier findest du alle Informationen.</td>
+        </tr>
+        <tr>
+            <td><strong>Schritt 3:</strong></td>
+            <td>Auf „zur Anmeldung“ klicken.</td>
+        </tr>
+        <tr>
+            <td><strong>Schritt 4:</strong></td>
+            <td><span class="orange">Du befindest dich hier.</span> Weitere Infos zu den Programmen findest du bei den Schritten davor.
+                <p><strong>Wenn neuer User:</strong> (Wenn nicht neuer User direkt zu Schritt 5 Benutzerkonto erstellen unter dem Menüpunkt: Neuer User (rechts oben)</p>
+                <p>Nach erfolgreicher Erstellung des Benutzerkontos erhältst du eine E-Mail mit dem eingegebenen Benutzernamen und Passwort. Bitte den Benutzername und das Passwort merken/aufschreiben, denn die Zugangsdaten können alle Jahre wieder benutzt werden, du hast Einsicht auf deine Anmeldungen und kannst bei Bedarf eine Zahlungsbestätigung herunterladen.</p></td>
+        </tr>
+        <tr>
+            <td><strong>Schritt 5:</strong></td>
+            <td>Melden dich mit deinem Username und Passwort an.</td>
+        </tr>
+        <tr>
+            <td><strong>Schritt 6:</strong></td>
+            <td>Wähle die Gemeinde und das gewünschte Programm aus.</td>
+        </tr>
+        <tr>
+            <td><strong>Schritt 7:</strong></td>
+            <td>Klicke rechts auf das grüne Feld und fülle das Anmeldeformular aus.</td>
+        </tr>
+        <tr>
+            <td><strong>Schritt 8:</strong></td>
+            <td>Nach erfolgreicher Anmeldung erhältst du gleich anschließend eine Bestätigungsmail. Zudem werden die Anmeldungen unter „Meine Anmeldungen“ angezeigt.</td>
+        </tr>
+        <tr>
+            <td><strong>Schritt 9:</strong></td>
+            <td>Der Zahlungsschein wird mittels Email zugesendet.</td>
+        </tr>
+        </table>
+    </div>
 </div>
