--- a/public/templates/info/faq-jdbl-it.html
+++ b/public/templates/info/faq-jdbl-it.html
@@ -1,4 +1,48 @@
 <div class="container">
     <h3>Istruzioni per la registrazione:</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Kz_am-8d38g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <div class="table-responsive">
+        <table class="table">
+          <tr>
+              <td><strong>Fase 1:</strong></td>
+              <td>entra nel sito www.jdbl.it</td>
+          </tr>
+          <tr>
+            <td><strong>Fase 2:</strong></td>
+            <td>alla voce “estate” seleziona il Comune ed il programma desiderato.</td>
+        </tr>
+        <tr>
+            <td><strong>Fase 3:</strong></td>
+            <td>fai clic su "iscrizione".</td>
+        </tr>
+        <tr>
+            <td><strong>Fase 4:</strong></td>
+            <td><span class="orange">Du befindest dich hier.</span> Weitere Infos zu den Programmen findest du bei den Schritten davor.
+                <p><strong>se sei un nuovo utente:</strong> (Se non sei un nuovo utente passa direttamente alla fase 5) Crea un nuovo account selezionando la voce “Nuovo utente”.</p>
+                <p>Dopo aver creato l'account riceverai un'e-mail con il nome utente e la password da te inseriti. Si prega di annotarsi tali dati di accesso, in quanto possono essere utilizzati ogni anno e tramite essi si ha accesso alle iscrizioni effettuate.</p></td>
+        </tr>
+        <tr>
+            <td><strong>Fase 5:</strong></td>
+            <td>Accedi con il tuo nome utente e la tua password.</td>
+        </tr>
+        <tr>
+            <td><strong>Fase 6:</strong></td>
+            <td>Scegli il comune e il programma desiderato.</td>
+        </tr>
+        <tr>
+            <td><strong>Fase 7:</strong></td>
+            <td>Clicca sul campo verde a destra e compila il modulo di registrazione.</td>
+        </tr>
+        <tr>
+            <td><strong>Fase 8:</strong></td>
+            <td>Dopo l'avvenuta registrazione riceverete una e-mail di conferma. Le registrazioni vengono visualizzate anche alla voce "Le mie registrazioni".</td>
+        </tr>
+        <tr>
+            <td><strong>Fase 9:</strong></td>
+            <td>La richiesta di pagamento sarà inviata via e-mail.</td>
+        </tr>
+        </table>
+    </div>
+
 </div>
