--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -120,11 +120,10 @@
 						<div class='form-group' ng-class='{ "has-error": registrationForm.schoolChild.$invalid }'>
 							<label for='schoolChild' class='control-label col-sm-2'>{{"RESERVATION.LABEL_SCHOOL_CHILD" | translate}}</label>
 							<div class='col-sm-8'>
-									<select ng-show='lang === "de"' name='schoolChild' class='sel-base form-control' ng-model='schoolChild'>
-
+									<select ng-show='lang === "de"' name='schoolChild' class='sel-base form-control' ng-model='schoolChild' required="required">
 										<option ng-repeat="level in schoolLevels" value='{{level.name}}'>{{level.name}}</option>
 									</select>
-									<select ng-show="lang === 'it'" name='schoolChild' class='sel-base form-control' ng-model='schoolChild'>
+									<select ng-show="lang === 'it'" name='schoolChild' class='sel-base form-control' ng-model='schoolChild' required="required">
 										<option ng-repeat="level in schoolLevels" value='{{level.name}}'>{{level.name_it}}</option>
 									</select>
 								<!--<input name='schoolChild' type='text' ng-model='schoolChild' required maxlength='100' class='form-control'></input>-->
