show registration info2

--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -21,18 +21,18 @@
 	
 	<div ng-show="(platform.isJugendsommer() || platform.isJDBL()) && isRegistrationWarningVisible()">
 		<div class="row">
-			<!--<div class="col-sm-3">
-				<h2><span ng-show="lang == 'de'" class="label label-info">Anmeldestart: 04 Februar 2020 um 19:00!</span></h2>
-				<h2><span ng-show="lang == 'it'" class="label label-info">Partenza iscrizioni: 03 febbraio 2020 alle ore 19:00!</span></h2>
-			</div>-->
+			<div class="col-sm-3">
+				<h2><span ng-show="lang == 'de'" class="label label-info">Anmeldestart: 01 Februar 2021 um 19:00!</span></h2>
+				<h2><span ng-show="lang == 'it'" class="label label-info">Partenza iscrizioni: 01 febbraio 2021 alle ore 19:00!</span></h2>
+			</div>
 		</div>
 	</div>
 
 	<div ng-show="platform.isKiso() && isRegistrationWarningVisible()">
 		<div class="row">
 			<div class="col-sm-3">
-				<h2><span ng-show="lang == 'de'" class="label label-info">Anmeldestart: 03 März 2020 um 19:00!</span></h2>
-				<h2><span ng-show="lang == 'it'" class="label label-info">Partenza iscrizioni: 03 marzo 2020 alle ore 19:00!</span></h2>
+				<h2><span ng-show="lang == 'de'" class="label label-info">Anmeldestart: 10 März 2021 um 19:00!</span></h2>
+				<h2><span ng-show="lang == 'it'" class="label label-info">Partenza iscrizioni: 10 marzo 2021 alle ore 19:00!</span></h2>
 			</div>
 		</div>
 	</div>
