--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -373,7 +373,7 @@
 			<div id="collapseThree" ng-class="(currentState === 3) ? 'panel-collapse collapse in' : 'panel-collapse collapse'" role="tabpanel" aria-labelledby="headingThree">
 				<div class="panel-body">
 					<div class='col-sm-offset-2 col-sm4'>
-						<div class="panel panel-default" ng-show="platform.isTest() || platform.isJDUL()">
+						<!--<div class="panel panel-default" ng-show="platform.isTest() || platform.isJDUL()">
 							<div class="panel-body">
 								<p>{{"RESERVATION.LABEL_COVID_PRIO_GENERAL1" | translate}}</br>{{"RESERVATION.LABEL_COVID_PRIO_GENERAL2" | translate}}</br>{{"RESERVATION.LABEL_COVID_PRIO_GENERAL3" | translate}}</p>
 								<p>{{"RESERVATION.LABEL_COVID_PRIO_START" | translate}}</p>
@@ -381,7 +381,7 @@
 								<input type='radio' name='covidprio' ng-click='setCovidPrio("social")'>  {{"RESERVATION.LABEL_COVID_PRIO_SOCIAL" | translate}}</input></br>
 								<input type='radio' name='covidprio' checked ng-click='setCovidPrio("none")'>  {{"RESERVATION.LABEL_COVID_PRIO_NONE" | translate}}</input>
 							</div>
-						</div>
+						</div>-->
 						<div ng-show="(platform.isTest() || platform.isKiso())">
 							<input type='checkbox' name='optpayment' ng-model='acceptsOptionalFee'><strong>{{"RESERVATION.LABEL_OPTIONALPAYMENT" | translate}}</strong></input>
 						</div>
