waitlist pdf email

--- a/public/templates/agb/agb-jdul-de.html
+++ b/public/templates/agb/agb-jdul-de.html
@@ -2,7 +2,7 @@
     <h2 class='text-orange col-sm-12'>Allgemeine Gesch&auml;tsbedingungen</h2>
     <div class='col-sm-9'>
         <h3>VORAUSGESCHICKT:</h3>
-        <p>Unsere Anmeldungen sind bindend und aus organisatorischen Gründen nur bis 2 Juni 2021 abänderbar. Nachmeldungen nach dem 2 Juni 2020 sind nicht mehr möglich. Auch während der Sommerferienprogramme können keine Nachmeldungen oder Wechsel mit anderen Kindern gemacht werden.</p>
+        <p>Unsere Anmeldungen sind bindend und aus organisatorischen Gründen nur bis 21 März 2021 abänderbar. Nachmeldungen nach dem 21 März 2021 sind nicht mehr möglich. Auch während der Sommerferienprogramme können keine Nachmeldungen oder Wechsel mit anderen Kindern gemacht werden.</p>
         <h3>BEGRENZTE TEILNEHMERZAHLEN</h3>
         <p>Aus organisatorischen Gründen ist für jedes Programm nur eine beschränkte Teilnehmerzahl vorgesehen.</p><!--Deshalb ist es wichtig, dass die Anmeldungen rechtzeitig und ausschließlich im Jugenddienst Unterland eingehen.<br />WICHTIG: Damit ein Programm stattfinden kann, werden <strong>mindestens 10 Kinder/Woche</strong> benötigt und <strong>maximal</strong> können <strong>30 Kinder/Woche</strong> teilnehmen.</p>-->
         <h3>TEILNAHMEBEITRAG</h3>
@@ -13,5 +13,7 @@
         <p>Sämtliche von Ihnen erhobenen Daten werden ausschließlich für interne Zwecke verarbeitet und für Rundschreiben sowie für die Erstellung der Teilnehmerlisten bei den Sommerferienprogrammen verwendet. Mit seiner Unterschrift bestätigt der ermächtigte Elternteil, die hier angeführte Information zur Kenntnis genommen zu haben und den Jugenddienst ausdrücklich zu ermächtigen, die persönlichen Daten zu den besagten Zwecken, zu verwenden.</p>
         <h4>Einwilligung zur Veröffentlichung von Fotos und Videoaufnahmen:</h4>
         <p>Wir informieren hiermit ausdrücklich, dass im Laufe der Sommerferienprogramme von den Teilnehmern Bilder in digitaler und herkömmlicher Form sowie Videoaufnahmen, von ermächtigten Mitarbeitern des Jugenddienstes gemacht werden und diese Bilder und Filme ausschließlich im Sinne der Tätigkeit desJugenddienstes, in Presseaussendungen, Internetauftritten und Bildershows verwendet, veröffentlicht und verbreitet werden. Der ermächtigte Elternteil bestätigt, die hier angeführte Information zur Kenntnis genommen zu haben und den Jugenddienst ausdrücklich zu ermächtigen, die Bilder und Aufnahmen zu den besagten Zwecken, kostenlos zu verwenden.</p>
+        <h3>KRANKHEIT</h3>
+        <p>Sollte ein Kind die gesamte Woche krankheitsbedingt abwesend sein, wird der gesamte Teilnehmerbetrag für die gesamte Woche nach Vorlage eines ärztlichen Zeugnisses zurücküberwiesen werden.</p>
     </div>
 </div>
