changes text jdul

--- a/public/templates/info/info-jdul-de.html
+++ b/public/templates/info/info-jdul-de.html
@@ -1,6 +1,6 @@
 <div class="container" style="font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;">
-<img src="./../../../assets/jdul_ente.jpg" style="height:320px;margin-right:15px" /><br >
-<p><a href="https://www.jugenddienstunterland.it/deutsch/5-angebote/5-6-h%C3%A4ufige-fragen/">Häufige Fragen</a></p>
+<img src="./../../../assets/button_ente.png" style="height:320px;margin-right:15px" /><br >
+<p><a href="https://www.jugenddienstunterland.it/fragen">Häufige Fragen</a></p>
 <!--<h2>Sommerferienprogramme für Kindergartenkinder und Grundsch&uuml;lerInnen</h2>
 <h4 class="brand-orange">DAS PROGRAMM:</h4>
 <p>
