--- a/public/templates/agb/agb-jdul-it.html
+++ b/public/templates/agb/agb-jdul-it.html
@@ -2,22 +2,20 @@
     <h2 class='text-orange col-sm-12'>termini e condizioni generali</h2>
     <div class='col-sm-9'>
         <h3>PREMESSA:</h3>
-        <p>Per motivi organizzativi le iscrizioni sono vincolanti e non possono essere modificate dopo il 21 03 2021. Non è inoltre possibile iscriversi dopo questa data.</p>
+        <p>Per motivi organizzativi le iscrizioni sono vincolanti e non possono essere modificate dopo il 21 marzo 2021. Non è inoltre possibile iscriversi dopo questa data.</p>
         <p>ATTENZIONE: Durante il programma estivo non sarà più possibile iscriversi o fare dei cambi con altri bambini.</p>
         <h3>NUMERO LIMITATO DI PARTECIPANTI</h3>
         <p>Per motivi organizzativi è stato stabilito un numero massimo di partecipanti per ogni programma.</p> <!-- Pertanto è importante che l'iscrizione pervenga puntualmente ed esclusivamente tramite il Jugenddienst Unterland.<br />IMPORTANTE: Per lo svolgimento di un programma servono <strong>almeno 10 iscritti/settimana</strong> e al <strong>massimo possono partecipare 30 iscritti/settimana.</strong></p>-->
         <h3>QUOTA D'ISCRIZIONE</h3>
-        <p>La quota d’iscrizione è da versare dopo avere ricevuto la conferma di avvenuta iscrizione l’8 giugno.</p>
+        <p>La quota d’iscrizione è da versare dopo avere ricevuto la conferma di avvenuta iscrizione l’21 marzo.</p>
         <!--<p>Le chiediamo di versare la quota d'iscrizione sul nostro conto corrente entro <strong>20.03.2020</strong>.<br />Causale: Nome e cognome del bambino e comune di residenza<br /><strong>COORDINATE BANCARIE:<br />Cassa Raiffeisen Salorno - Filiale di Egna<br />IBAN: IT27T0822058371000304204042</strong></p>-->
         <h3>CANCELLAZIONE PROGRAMMA E STORNO</h3>
-        <p>Per motivi organizzativi, dopo l’avvenuta iscrizione non è più possibile annullare l&#39;iscrizione e ottenere il rimborso della quota di partecipazione. In caso di malattia, (con certificato medico da presentare entro 5 giorni) sarà rimborsata l&#39;intera quota.</p>
+        <p>Per motivi organizzativi, dopo l’avvenuta iscrizione non è più possibile annullare l&#39;iscrizione e ottenere il rimborso della quota di partecipazione. Se un bambino è assente per tutta la settimana a causa di una malattia, l'intera quota per quella settimana sarà rimborsata presentando il certificato medico.</p>
         <h3>PRIVACY:</h3>
         <p>Tramite l'iscrizione viene dato il consenso al trattamento dei dati personali nell'ambito della gestione dei programmi in conformità con le norme vigenti sulla protezione dei dati, in base al decreto provinciale L.D. 196/2003.</p>
         <h4>Informativa ai sensi dell´art. 13 D. LGS. 196/2003: </h4>
         <p>Ai sensi dell'articolo 13 del D. lgs n. 196/2003 Le forniamo le seguenti informazioni: Jugenddienst Unterland, via Canonica 1, 39044 Egna, utilizzerà i Vostri dati per gli seguenti scopi: invio di e-mail e lettere, per adempiere agli obblighi di legge derivanti anche da normative locali e comunali nonché da norme del diritto civile e penale, per adempiere ad eventuali obblighi contrattuali nei confronti dell'interessato, alla tutela del credito e gestione del debito. I Vostri dati saranno elaborati e memorizzati in formato elettronico.</p>
         <h4>Consenso alla pubblicazione di foto e riprese video:</h4>
         <p>Con la presente si informa espressamente che nell'ambito dello svolgimento dei programmi delle vacanze estive i partecipanti verranno fotografati e video ripresi da collaboratori autorizzati del "Jugenddienst Unterland". Dette fotografie e videoriprese verranno utilizzate esclusivamente per pubblicazioni legate alle attività inerenti al "Jugenddienst Unterland" in comunicati stampa, siti internet e fotoshows. Con l'apposizione da parte del genitore autorizzato, lo stesso conferma di conoscere il contenuto sopra riportato e contestualmente dà il proprio consenso all'utilizzo a titolo gratuito delle foto e delle riprese agli scopi sopra indicati.</p>
-        <h3>L'INFERMITA</h3>
-        <p>Se un bambino è assente per tutta la settimana a causa di una malattia, l'intera quota per quella settimana sarà rimborsata presentando il certificato medico.</p>
     </div>
 </div>
