repair broken faq link

--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -12,9 +12,9 @@
 		<div class="row">
 			<div class="col-sm-3">
 				<h2><span ng-show="lang == 'de'" class="label label-info">Anmeldestart: 10.02.2021</span></h2>
-				<h2><span ng-show="lang == 'de'" class="label label-warning"><a href="https://www.jugenddienstunterland.it/deutsch/5-angebote/5-6-h%C3%A4ufige-fragen/">Häufige Fragen</a></span></h2>
+				<h2><span ng-show="lang == 'de'" class="label label-warning"><a href="https://www.jugenddienstunterland.it/fragen">Häufige Fragen</a></span></h2>
 				<h2><span ng-show="lang == 'it'" class="label label-info">Partenza iscrizioni: 10.02.2021</span></h2>
-				<h2><span ng-show="lang == 'it'" class="label label-warning"><a href="https://www.jugenddienstunterland.it/italiano/5-offerte/5-6-domande-frequenti/">Domande frequenti</a></span></h2>
+				<h2><span ng-show="lang == 'it'" class="label label-warning"><a href="https://www.jugenddienstunterland.it/fragen?lang=it">Domande frequenti</a></span></h2>
 			</div>
 		</div>
 	</div>
