--- a/public/templates/selection.html
+++ b/public/templates/selection.html
@@ -26,11 +26,11 @@
     </div>
 </div> -->
 
-<div ng-show="(platform.isKiso() && canReserveKiso() && lang == 'de') || platform.isTest()">
+<div ng-show="(platform.isKiso() && canReserveKiso() && lang == 'de') || platform.isTest()" style="min-height:750;">
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdT1RbfCzE31cYqC_RsK8EtySSRaPDZlhmmqF6RQzSxRm595A/viewform?embedded=true" width="640" height="100%" frameborder="0" marginheight="0" marginwidth="0" onload="scroll(0,0)">Wird geladen…</iframe>
 </div>
 
-<div ng-show="(platform.isKiso() && canReserveKiso() && lang == 'it') || platform.isTest()">
+<div ng-show="(platform.isKiso() && canReserveKiso() && lang == 'it') || platform.isTest()" style="min-height:750;">
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSepf8YXPV14N7INGV6pnC9Ox12uDwwB-r1Dy291gqm5_bIHbA/viewform?embedded=true" width="640" height="100%" frameborder="0" marginheight="0" marginwidth="0" onload="scroll(0,0)">Wird geladen…</iframe>
 </div>
 
