--- a/public/templates/agb/agb-kiso-de.html
+++ b/public/templates/agb/agb-kiso-de.html
@@ -1,5 +1,8 @@
 <div class="container">
-	<h2 class='text-orange'>Allgemeine Gesch&auml;tsbedingungen 2020</h2>
+	<iframe src="assets/kiso_agb_de.pdf" width="640" height="500">agb de</iframe>
+	<br>
+	<iframe src="assets/kiso_daten_de.pdf" width="640" height="500">data de</iframe>
+	<!--<h2 class='text-orange'>Allgemeine Gesch&auml;tsbedingungen 2020</h2>
 	<div class="col-sm-8">
 	<ol>
 		<li><strong>Anmeldung</strong>
@@ -38,5 +41,5 @@
 			<p>Mit der Anmeldung erklärt sich das Elternteil und Erziehungsberechtigter mit obigen Bedingungen einverstanden. Für Rückfragen stehen die Mitarbeiter*innen des Jugenddienst Bozen gerne zur Verfügung.</p>
 		</li>
 	</ol>
-	</div>
+	</div>-->
 </div>
