--- a/public/templates/agb/agb-kiso-it.html
+++ b/public/templates/agb/agb-kiso-it.html
@@ -1,5 +1,8 @@
 <div class="container">
-	<h2 class='text-orange'>Condizioni e termini 2020</h2>
+	<iframe src="assets/kiso_agb_it.pdf" width="640" height="500">agb it</iframe>
+	<br>
+	<iframe src="assets/kiso_daten_it.pdf" width="640" height="500">data it</iframe>
+	<!--<h2 class='text-orange'>Condizioni e termini 2020</h2>
 	<div class="col-sm-8">
 	<ol>
 		<li><strong>Iscrizione</strong>
@@ -37,5 +40,5 @@
 			<p>Con l’iscrizione il genitore si dichiara d’accordo con le condizioni sopra citate. Per ulteriori chiarimenti si prega di non esitare a consultare i collaboratori dello Jugenddienst Bozen.</p>
 		</li>
 	</ol>
-	</div>
+	</div>-->
 </div>
