--- a/public/templates/info/info-kiso-it.html
+++ b/public/templates/info/info-kiso-it.html
@@ -1,5 +1,7 @@
 <div class='container'>
 	<h2><span  ng-show="lang == 'it'" class="label label-default">Partenza iscrizioni: 02 marzo 2021, ore 19.00!</span></h2>
+	<br>
+	<img src="./../../../../assets/kiso2021.jpg" style="height:500px;float:left;margin-right:15px" />
 </div>
 <!--<div class='container'>
 	
