--- a/public/templates/info/info-kiso-de.html
+++ b/public/templates/info/info-kiso-de.html
@@ -1,5 +1,7 @@
 <div class='container'>
 	<h2><span  ng-show="lang == 'de'" class="label label-default">Anmeldestart: 02. März 2021, 19.00 Uhr!</span></h2>
+	<br>
+	<img src="./../../../../assets/kiso2021.jpg" style="height:500px;float:left;margin-right:15px" />
 </div>
 <!--<div class='container'>
 	<h2><strong>Neue Infos zum KiSo – Kindersommer 2020 Covid-19</strong></h2>
