--- a/public/templates/info/faq-kiso-de.html
+++ b/public/templates/info/faq-kiso-de.html
@@ -1,14 +1,14 @@
 <div class='container'>
     <h2 class='orange'>Wichtige FAQs zu den Anmeldemodalitäten</h2>
     
-    <!--<button class="btn btn-default" type="button" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapseExample">
+    <button class="btn btn-default" type="button" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapseExample">
         Ab wann kann ich mein Kind anmelden?  <span class="caret"></span>
     </button>
     <div class="collapse" id="collapse1">
     <div class="well" style="min-height:400px;">
-    Die Anmeldungen beginnen am Dienstag, 3. März pünktlich um 19.00 Uhr. Erst in diesem Moment erscheint der Button <button type="button" class="btn btn-xlarge btn-success"><span class='glyphicon glyphicon-user'></span><br /><div style="font-size:25%">{{"BTN.RESERVE" | translate}}</div></button>. Mit Klick auf diesen Button erscheint das Anmeldeformular (siehe unten). <br />UM SICH ANMELDEN ZU KÖNNEN, MÜSSEN SIE ÜBER EIN BENUTZERKONTO VERFÜGEN UND EINGELOGGT SEIN!<br />Achtung: Dafür muss um 19.00 Uhr die Homepage neu geöffnet werden
-    <img src="./../../../../assets/screen/kiso_screen_reg1-de.jpg" alt="Registrierung1" style="height:300px;float:left;margin-right:15px" />
-    <img src="./../../../../assets/screen/kiso_screen_reg2-de.jpg" alt="Registrierung2" style="height:300px;float:left;margin-right:15px" />
+    Die Anmeldungen beginnen am Dienstag, 2. März pünktlich um 19.00 Uhr. Erst in diesem Moment erscheint unter dem Menüfeld "Anmeldungen" das entsprechende Google-Formular. UM SICH ANMELDEN ZU KÖNNEN, MÜSSEN SIE ÜBER EIN BENUTZERKONTO VERFÜGEN UND EINGELOGGT SEIN!
+    <!--<img src="./../../../../assets/screen/kiso_screen_reg1-de.jpg" alt="Registrierung1" style="height:300px;float:left;margin-right:15px" />
+    <img src="./../../../../assets/screen/kiso_screen_reg2-de.jpg" alt="Registrierung2" style="height:300px;float:left;margin-right:15px" />-->
     </div>
     </div>
     <br />
@@ -17,7 +17,7 @@
     </button>
     <div class="collapse" id="collapse2">
     <div class="well">
-    Falls innerhalb weniger Minuten nicht eine automatische Rückantwort an die angegebene E-Mail-Adresse des Erziehungsberechtigten zum technischen Erfolg der Anmeldung erhalten wird, ist ein Fehler passiert und muss die Anmeldung erneut abgeschickt werden.
+        Nachdem Sie alle fünf Abschnitte des Google-Formulars ausgefüllt haben und auf den Button „Senden“ klicken, erscheint ein Dialogfeld „Vielen Dank für die Anmeldung Ihres Kindes“, was den technischen Erfolg der Anmeldung bestätigt. (Sollte eine weiße Seite erscheinen, probieren Sie nach oben zu scrollen.) 
     </div>
     </div>
     <br />
@@ -26,7 +26,7 @@
     </button>
     <div class="collapse" id="collapse3">
     <div class="well">
-    Ihr Kind muss für jede Woche einzeln angemeldet werden. Um Ihr Kind für mehrere der 7 Wochen anzumelden, müssen Sie somit den Anmeldevorgang entsprechend oft wiederholen. <br />Tipp: Verwenden Sie den Button <button class='btn btn-success'>{{"RESERVATION.LABEL_LOAD_PREVIOUS" | translate}}</button> um Ihre vorherigen Anmeldedaten automatisch einzufügen.
+    Ihr Kind muss für jede Woche einzeln angemeldet werden. Um Ihr Kind für mehrere der 7 Wochen anzumelden, müssen Sie somit den Anmeldevorgang entsprechend oft wiederholen.
     </div>
     </div>
     <br />
@@ -35,7 +35,7 @@
     </button>
     <div class="collapse" id="collapse4">
     <div class="well">
-    Der Geschwisterrabatt von 10,00 Euro gilt nur für das zweite Kind (bzw. alle weiteren Kinder), falls es in derselben Woche wie sein Bruder bzw. seine Schwester angemeldet ist. BITTE VERWENDEN SIE DAFÜR DEN BUTTON <button class='btn btn-warning'><img src="../../assets/sibling.png" style="height:20px;margin:2px" class="img-rounded"><strong>{{"RESERVATION.LABEL_LOAD_SIBLING" | translate}}</strong></button> !
+    Der Geschwisterrabatt von 10,00 Euro gilt nur für das zweite Kind (bzw. alle weiteren Kinder), falls es in derselben Woche wie sein Bruder bzw. seine Schwester angemeldet ist. JEDES KIND MUSS EINZELN MIT EINEM EIGENEN FORMULAR ANGEMELDET WERDEN!
     <br />(Rechenbeispiel: Lukas und Anna sind beide für die 3. und 4. KISO-Woche angemeldet. Der zu überweisende Teilnahme-Gesamtbetrag beläuft sich auf 80+70+80+70=300,00 Euro.)
     </div>
     </div>
@@ -76,5 +76,4 @@
     In Ihrem User-Account können Sie unter dem Menüfeld <button class="btn">{{'NAV.MYRES' | translate}}</button> den Status Ihrer getätigten Anmeldungen einsehen. Sobald in der Spalte „bezahlt“ ein Kreuzchen aufscheint, ist Ihre Zahlung gebucht und die Anmeldung somit rechtsgültig. BITTE KONTAKTIEREN SIE UNS ERST, WENN NACH FÜNF WERKTAGEN AB ZAHLUNGSDATUM KEIN ENTSPRECHENDES KREUZCHEN AUFSCHEINT!
     </div>
     </div>
--->
 </div>
